Prevent text wrapping in reaction counter

--- a/wcfsetup/install/files/style/ui/reactions.scss
+++ b/wcfsetup/install/files/style/ui/reactions.scss
@@ -116,6 +116,7 @@ li.reactCountButton {
 	padding: 5px;
 	cursor: pointer;
 	color: $wcfContentDimmedText;
+	white-space: nowrap;
 }
 
 li.reactCountButton:hover {
